[gd_scene load_steps=2 format=2]

[ext_resource path="res://DialogEditor/graph_node_start.gd" type="Script" id=1]

[node name="graphNodeStart" type="GraphNode"]
self_modulate = Color( 0.00784314, 1, 0, 1 )
margin_top = -1.0
margin_right = 113.0
margin_bottom = 58.0
title = "Start Node"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0, 1, 0.133333, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="start" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 97.0
margin_bottom = 38.0
text = "Start"

[node name="hBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 38.0
margin_right = 97.0
margin_bottom = 56.0

[node name="entryDescription" type="Label" parent="hBoxContainer"]
margin_right = 69.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 18 )
text = "EntryPoint:"
align = 1
valign = 2

[node name="entry" type="Label" parent="hBoxContainer"]
margin_left = 73.0
margin_right = 81.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 18 )
text = "0"
align = 1
valign = 2

[connection signal="close_request" from="." to="." method="_on_graphNodeStart_close_request"]
[connection signal="resize_request" from="." to="." method="_on_graphNodeStart_resize_request"]
